syntax = "proto3";

package contract.v1;

message Events {
    repeated Approval approvals = 1;
    repeated ApprovalForAll approval_for_alls = 2;
    repeated OwnershipTransferred ownership_transferreds = 3;
    repeated Transfer transfers = 4;
}

message Approval {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    uint64 evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes owner = 5;
    bytes approved = 6;
    string token_id = 7;
}

message ApprovalForAll {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    uint64 evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes owner = 5;
    bytes operator = 6;
    bool approved = 7;
}

message OwnershipTransferred {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    uint64 evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes previous_owner = 5;
    bytes new_owner = 6;
}

message Transfer {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    uint64 evt_block_time = 3;
    uint64 evt_block_number = 4;
    bytes from = 5;
    bytes to = 6;
    string token_id = 7;
}
